Fri Jul 11 18:41:41 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any.cpp:
        * tao/Any.h:
        * tao/Valuetype_Adapter.h:
        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:
        * tao/Valuetype/Valuetype_Adapter_Impl.h:

	  Fixed a bug in the Any extraction operators that widen to Object,
	  ValueBase and AbstractBase, which were failing when
	  the Any contains an unknown IDL type. Thanks to Anand
	  <anand@iCMGworld.com> for reporting the problem with
	  widening to Object.

Fri Jul 11 16:23:05 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao\Strategies\DIOP_Acceptor.cpp (close): 

	  Method should return 0.

Fri Jul 11 01:08:41 2003  Irfan Pyarali  <irfan@oomworks.com>

	* orbsvcs/orbsvcs/AV/TCP.cpp:
	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connector.cpp:
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
	* tao/IIOP_Connector.cpp:
	* tao/Strategies/SCIOP_Connector.cpp:
	* tao/Strategies/SHMIOP_Connector.cpp:
	* tao/Strategies/UIOP_Connector.cpp:

	  Added explicit template instantiation for ACE_Connector_Base.

Thu Jul 10 20:01:43 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao\Transport_Cache_Manager.cpp: 

	  Fixed template instantiation goofs.

Thu Jul 10 19:01:54 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao\ORB_Core.cpp (lane_resources): 

	  This file got checked in by mistake.

Thu Jul 10 18:58:43 2003  Irfan Pyarali  <irfan@oomworks.com>

	* orbsvcs\orbsvcs\PortableGroup\UIPMC_Acceptor.cpp: 
	* tao\Strategies\DIOP_Acceptor.cpp: 
	
	  - open_i() now transfers connection handler ownership to the
	  Reactor after the handler successfully registers with the
	  Reactor.

	  - close() does nothing since the memory for the connection
	  handler is automatically managed.

	* orbsvcs\orbsvcs\PortableGroup\UIPMC_Transport.cpp:

	  - Forgot to remove the assert from ~TAO_UIPMC_Transport().

	* orbsvcs\orbsvcs\PortableGroup\UIPMC_Connection_Handler.cpp (handle_close): 
	* tao\Strategies\DIOP_Connection_Handler.cpp (handle_close): 
